# ink-and-iron

./: .gitignore  Cargo.toml  README.md  build.rs  download_models.sh  version.sh
.cargo/: config.toml
.github/workflows/: nightly.yaml  release.yaml
assets/civilisations/: emerald-grove.civ.ron  infernal-horde.civ.ron  ishabia-kingdom.civ.ron  luikha-empire.civ.ron
assets/llm-providers/: llama_cpu.llm.ron  llama_cuda.llm.ron  llama_fusor.llm.ron
assets/llm/llama/: Notice  config.json
assets/meshes/: archer.glb  fighter.glb  mage.glb
helpers/: Cargo.toml
helpers/src/: lib.rs
llm/: Cargo.toml
llm-api/: Cargo.toml
llm-api/src/: lib.rs
llm-provider/: Cargo.toml
llm-provider-cpu/: Cargo.toml
llm-provider-cuda/: Cargo.toml
llm-provider-cuda/src/: lib.rs
llm-provider-fusor/: Cargo.toml
llm-provider-fusor/src/: lib.rs
llm-provider-mac/: Cargo.toml
llm-provider/src/: lib.rs
llm/src/: lib.rs
menu/: Cargo.toml
menu/src/: lib.rs
pathfinding/: Cargo.toml
pathfinding/src/: lib.rs
src/: generate.rs  helpers.rs  llm.rs  logs.rs  main.rs  menu.rs  minimap.rs  pathfinding.rs  render_layers.rs  ui.rs
world-generation/: Cargo.toml
world-generation/src/: lib.rs
