[package]
name = "ink-and-iron"
edition = "2024"
publish = false
[workspace]
members = ["helpers","llm-api", "llm-provider", "llm-provider-cpu", "llm-provider-cuda", "pathfinding", "world-generation"]
[workspace.dependencies]
tokio = { version = "1.48.0", features = ["full"] }
helpers = {path="./helpers"}
llm-api = { path = "./llm-api" }
world-generation = {path = "./world-generation"}
pathfinding = {path = "./pathfinding"}
[dependencies]
anyhow = "1"
bevy_egui = "0.38.0"
#bevy_pancam = "0.19.0"
clap = { version = "4.5", features = ["derive"] }
colorgrad = "0.8.0"
glam = { version = "0.30.9", features = ["rand"] }
num = "0.4.3"
petgraph = "0.8.3"
rand = "0.9.2"
rand_chacha = "0.9.0"
#smallvec = "1.15.1"
#voronoice = "0.2.0"
serde = { version = "1.0.228", features = ["derive"] }
bevy-tokio-tasks = "0.17.0"
tokio = { workspace = true }
bevy_prototype_lyon = "0.15.0"
bevy_kira_audio = { version = "0.24.0", features = ["wav"] }
bevy_easings = "0.17.1"
llm-api = { workspace = true}
world-generation = {workspace = true}
pathfinding = {workspace = true}
helpers = {workspace = true}
llm ={ path = "./llm"}

#bevy_panorbit_camera = { version = "0.33.0", features = ["bevy_egui"] }
tracing-appender = "0.2.3"
bevy_rts_camera = { version = "0.12"}
chrono = "0.4.42"
zip = "6.0.0"
bevy-persistent = { version = "0.9.0", features = ["toml"] }
dirs = "6.0.0"
bevy-panic-handler = "6.0.0"
thiserror = "2.0.17"

[dependencies.bevy]
version = "0.17.2"
default-features = false
features = [
    "std",
    "async_executor",
    #"animation",
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_post_process",
    "bevy_anti_alias",
    "bevy_gilrs",
    #"bevy_gizmos",
    "bevy_gltf",
    "bevy_input_focus",
    "bevy_log",
    "bevy_mesh_picking_backend",
    "bevy_pbr",
    "bevy_picking",
    "bevy_render",
    #"bevy_scene",
    "bevy_image",
    "bevy_mesh",
    "bevy_camera",
    "bevy_light",
    "bevy_shader",
    "bevy_sprite",
    "bevy_sprite_picking_backend",
    "bevy_sprite_render",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_picking_backend",
    "bevy_ui_render",
    "bevy_window",
    "bevy_winit",
    "custom_cursor",
    "default_font",
    "hdr",
    #"ktx2",
    "multi_threaded",
    "png",
    "reflect_auto_register",
    #"smaa_luts",
    #"sysinfo_plugin",
    "tonemapping_luts",
    #"webgl2",
    "x11",
    "wayland",
    "debug",
    #"zstd_rust",
]

[profile.dev.package."*"]
opt-level = 3

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false
