[package]
name = "ink-and-iron"
edition = "2024"
publish = false
build = "build.rs"
[workspace]
members = [
    "helpers",
    "llm-api",
    "llm-provider",
    "llm-provider-cpu",
    "llm-provider-cuda",
    "llm-provider-mac",
    "llm-provider-fusor",
    "menu",
    "pathfinding",
    "world-generation",
]
[workspace.dependencies]
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
helpers = { path = "./helpers" }
llm-api = { path = "./llm-api" }
world-generation = { path = "./world-generation" }
pathfinding = { path = "./pathfinding" }
geo = "0.32.0"
[dependencies]
anyhow = "1"
bevy_egui = "0.39.0"
clap = { version = "4.5", features = ["derive"] }
colorgrad = "0.8.0"
glam = { version = "0.30", features = ["rand"] }
num = "0.4.3"
petgraph = "0.8.3"
rand = "0.9.2"
rand_chacha = "0.9.0"
serde.workspace = true
bevy-tokio-tasks = "0.18"
tokio = { workspace = true }
bevy_prototype_lyon = "0.16"
bevy_kira_audio = { version = "0.25.0", features = ["wav"] }
bevy_easings = { version = "0.18" }
llm-api = { workspace = true }
world-generation = { workspace = true }
pathfinding = { workspace = true }
helpers = { workspace = true }
llm = { path = "./llm" }
menu = { path = "./menu" }
tracing-appender = "0.2.3"
bevy_rts_camera = { version = "0.13" }
chrono = "0.4.42"
zip = { version = "7", default-features = false, features = [
    "deflate",
    "time",
] }
bevy-persistent = { version = "0.10.0", features = ["toml"] }
dirs = "6.0.0"
bevy-panic-handler = { version = "7.0.0" }
thiserror = "2.0"
bevy-steamworks = "0.16"
geo.workspace = true
ron = "0.12.0"

[build-dependencies]
dotenvy = "0.15.7"

[dependencies.bevy]
version = "0.18"
default-features = false
features = [
    "default_app",
    "default_platform",
    "2d_bevy_render",
    "3d_bevy_render",
    "ui_bevy_render",
    "picking",
]

[profile.dev.package."*"]
opt-level = 3

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false
