[package]
name = "llm-provider-cuda"
version = "0.1.0"
edition = "2024"

[lib]
name = "llm_provider_cuda"
path = "./src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
llm-api = {path = "../llm-api"}
llm-provider = {path = "../llm-provider",features = ["cuda"]}
tokio = { workspace = true}
anyhow = "*"