[package]
name = "llm-provider-fusor"
edition = "2024"
publish = false


[lib]
crate-type = ["cdylib"]

[dependencies]
llm-api = {workspace = true}
#kalosm-language = { version = "0.4.0",git = "https://github.com/floneum/floneum" }
kalosm-llama = { version = "0.4.0", features = ["tokio"],git = "https://github.com/floneum/floneum" }
kalosm-sample = { version = "0.4.0",git = "https://github.com/floneum/floneum" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { workspace = true}
log = "*"
anyhow = "*"
once_cell = "*"

[features]