[package]
name = "llm-provider"
edition = "2024"
publish = false




[dependencies]
llm-api = {path = "../llm-api"}
kalosm-llama = { version = "0.4.0", default-features = false, git = "https://github.com/floneum/floneum" }
kalosm-language = { version = "0.4.0", default-features = false,features = ["llama"], git = "https://github.com/floneum/floneum" }
kalosm-model-types ={ version = "0.4.0", default-features = false, git = "https://github.com/floneum/floneum" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { workspace = true}
log = "*"
anyhow = "*"
once_cell = "*"

[features]
cuda = ["kalosm-llama/cuda"]